# TaskManager

./: CMakeLists.txt
src/: CMakeLists.txt
src/MenuLib/: CMakeLists.txt  Menu.cpp  Menu.h
src/Source/: CMakeLists.txt  source.cpp
src/TaskLib/: CMakeLists.txt  Task.cpp  Task.h
src/TaskManagerLib/: CMakeLists.txt  TaskManager.cpp  TaskManager.h
